--- a/project2/dlnd_image_classification.ipynb
+++ b/project2/dlnd_image_classification.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -435,15 +435,16 @@
     "    # print(pool_strides) (2, 2)\n",
     "    \n",
     "    weight_shape = [*conv_ksize, x_tensor.get_shape().as_list()[3], conv_num_outputs]\n",
-    "    weight = tf.Variable(tf.truncated_normal(shape = weight_shape, mean = 0, stddev = 0.1))\n",
-    "    bias = tf.Variable(tf.zeros(conv_num_outputs))\n",
+    "    \n",
+    "    conv_weights = tf.Variable(tf.truncated_normal(shape = weight_shape, mean = 0, stddev = 0.1))\n",
+    "    conv_bias = tf.Variable(tf.zeros(conv_num_outputs))\n",
     "    \n",
     "    conv_layer_strides = [1, *conv_strides, 1]\n",
     "    conv_pool_ksize = [1, *pool_ksize, 1]\n",
     "    conv_pool_strides = [1, *pool_strides, 1]\n",
     "    \n",
-    "    conv_layer = tf.nn.conv2d(x_tensor, weight, strides = conv_layer_strides ,padding = \"SAME\")\n",
-    "    conv_layer = tf.nn.bias_add(conv_layer, bias)\n",
+    "    conv_layer = tf.nn.conv2d(x_tensor, conv_weights, strides = conv_layer_strides ,padding = \"SAME\")\n",
+    "    conv_layer = tf.nn.bias_add(conv_layer, conv_bias)\n",
     "    conv_layer = tf.nn.relu(conv_layer)\n",
     "    \n",
     "    pool_layer = tf.nn.max_pool(conv_layer, ksize = conv_pool_ksize, strides = conv_pool_strides, padding = \"SAME\")\n",
@@ -467,11 +468,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def flatten(x_tensor):\n",
     "    \"\"\"\n",
@@ -480,7 +489,17 @@
     "    : return: A tensor of size (Batch Size, Flattened Image Size).\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    # print(x_tensor.get_shape().as_list()) [None, 10, 30, 6]\n",
+    "    \n",
+    "    dim1 = x_tensor.get_shape().as_list()[1]\n",
+    "    dim2 = x_tensor.get_shape().as_list()[2]\n",
+    "    dim3 = x_tensor.get_shape().as_list()[3]\n",
+    "    \n",
+    "    features = dim1 * dim2 * dim3\n",
+    "    \n",
+    "    flatten_tensor = tf.reshape(x_tensor, [-1, features])\n",
+    "    \n",
+    "    return flatten_tensor\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -499,11 +518,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def fully_conn(x_tensor, num_outputs):\n",
     "    \"\"\"\n",
@@ -513,7 +540,18 @@
     "    : return: A 2-D tensor where the second dimension is num_outputs.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    # print(x_tensor.get_shape().as_list()) [None, 128]\n",
+    "    # print(num_outputs) 40\n",
+    "    \n",
+    "    ful_shape = [x_tensor.get_shape().as_list()[1], num_outputs]\n",
+    "    \n",
+    "    ful_weights = tf.Variable(tf.truncated_normal(shape = ful_shape, mean = 0, stddev = 0.1))\n",
+    "    ful_bias = tf.Variable(tf.zeros(num_outputs))\n",
+    "    \n",
+    "    ful_layer = tf.add(tf.matmul(x_tensor, ful_weights), ful_bias)\n",
+    "    ful_layer = tf.nn.relu(ful_layer)\n",
+    "    \n",
+    "    return ful_layer\n",
     "\n",
     "\n",
     "\"\"\"\n",
