--- a/project3/dlnd_tv_script_generation.ipynb
+++ b/project3/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,13 +47,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Stats\n",
+      "Roughly the number of unique words: 11492\n",
+      "Number of scenes: 262\n",
+      "Average number of sentences in each scene: 15.248091603053435\n",
+      "Number of lines: 4257\n",
+      "Average number of words in each line: 11.50434578341555\n",
+      "\n",
+      "The sentences 0 to 10:\n",
+      "Moe_Szyslak: (INTO PHONE) Moe's Tavern. Where the elite meet to drink.\n",
+      "Bart_Simpson: Eh, yeah, hello, is Mike there? Last name, Rotch.\n",
+      "Moe_Szyslak: (INTO PHONE) Hold on, I'll check. (TO BARFLIES) Mike Rotch. Mike Rotch. Hey, has anybody seen Mike Rotch, lately?\n",
+      "Moe_Szyslak: (INTO PHONE) Listen you little puke. One of these days I'm gonna catch you, and I'm gonna carve my name on your back with an ice pick.\n",
+      "Moe_Szyslak: What's the matter Homer? You're not your normal effervescent self.\n",
+      "Homer_Simpson: I got my problems, Moe. Give me another one.\n",
+      "Moe_Szyslak: Homer, hey, you should not drink to forget your problems.\n",
+      "Barney_Gumble: Yeah, you should only drink to enhance your social skills.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "view_sentence_range = (0, 10)\n",
     "\n",
@@ -101,16 +126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import problem_unittests as tests\n",
+    "from collections import Counter\n",
     "\n",
     "def create_lookup_tables(text):\n",
     "    \"\"\"\n",
@@ -119,7 +153,14 @@
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    # print(text[:100])\n",
+    "    \n",
+    "    counts = Counter(text)\n",
+    "    vocab = sorted(counts, key = counts.get, reverse = True)\n",
+    "    vocab_to_int = {word: i for i, word in enumerate(vocab , 1)}\n",
+    "    int_to_vocab = {value: key for key, value in vocab_to_int.items()}\n",
+    "    \n",
+    "    return vocab_to_int, int_to_vocab\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -155,13 +196,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def token_lookup():\n",
     "    \"\"\"\n",
@@ -169,7 +218,11 @@
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    token_dict = {\".\": \"||Period||\", \",\": \"||Comma||\", \n",
+    "                  \";\": \"||Semicolon||\", \"--\": \"||Dash||\",\n",
+    "                  \")\": \"||RightParentheses||\", \"(\": \"||LeftParentheses||\", \"\\n\": \"||Return||\",\n",
+    "                  \"!\": \"||Exclamationmark||\", '\"': \"||QuotationMark||\", \"?\": \"||Questionmark||\"}\n",
+    "    return token_dict\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -190,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -218,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
