--- a/project3/dlnd_tv_script_generation.ipynb
+++ b/project3/dlnd_tv_script_generation.ipynb
@@ -665,24 +665,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 10\n",
+    "num_epochs = 20\n",
     "# Batch Size\n",
-    "batch_size = 128\n",
+    "batch_size = 256\n",
     "# RNN Size\n",
     "rnn_size =4\n",
     "# Embedding Dimension Size\n",
     "embed_dim = 300\n",
     "# Sequence Length\n",
-    "seq_length = 5\n",
+    "seq_length = 8\n",
     "# Learning Rate\n",
-    "learning_rate = 0.01\n",
+    "learning_rate = 0.001\n",
     "# Show stats for every n number of batches\n",
     "show_every_n_batches = 16\n",
     "\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -749,80 +749,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/107   train_loss = 8.822\n",
-      "Epoch   0 Batch   16/107   train_loss = 8.266\n",
-      "Epoch   0 Batch   32/107   train_loss = 6.713\n",
-      "Epoch   0 Batch   48/107   train_loss = 5.695\n",
-      "Epoch   0 Batch   64/107   train_loss = 5.200\n",
-      "Epoch   0 Batch   80/107   train_loss = 4.972\n",
-      "Epoch   0 Batch   96/107   train_loss = 4.874\n",
-      "Epoch   1 Batch    5/107   train_loss = 4.834\n",
-      "Epoch   1 Batch   21/107   train_loss = 4.813\n",
-      "Epoch   1 Batch   37/107   train_loss = 4.800\n",
-      "Epoch   1 Batch   53/107   train_loss = 4.790\n",
-      "Epoch   1 Batch   69/107   train_loss = 4.783\n",
-      "Epoch   1 Batch   85/107   train_loss = 4.777\n",
-      "Epoch   1 Batch  101/107   train_loss = 4.772\n",
-      "Epoch   2 Batch   10/107   train_loss = 4.767\n",
-      "Epoch   2 Batch   26/107   train_loss = 4.763\n",
-      "Epoch   2 Batch   42/107   train_loss = 4.759\n",
-      "Epoch   2 Batch   58/107   train_loss = 4.756\n",
-      "Epoch   2 Batch   74/107   train_loss = 4.753\n",
-      "Epoch   2 Batch   90/107   train_loss = 4.750\n",
-      "Epoch   2 Batch  106/107   train_loss = 4.747\n",
-      "Epoch   3 Batch   15/107   train_loss = 4.744\n",
-      "Epoch   3 Batch   31/107   train_loss = 4.741\n",
-      "Epoch   3 Batch   47/107   train_loss = 4.738\n",
-      "Epoch   3 Batch   63/107   train_loss = 4.735\n",
-      "Epoch   3 Batch   79/107   train_loss = 4.732\n",
-      "Epoch   3 Batch   95/107   train_loss = 4.728\n",
-      "Epoch   4 Batch    4/107   train_loss = 4.724\n",
-      "Epoch   4 Batch   20/107   train_loss = 4.720\n",
-      "Epoch   4 Batch   36/107   train_loss = 4.715\n",
-      "Epoch   4 Batch   52/107   train_loss = 4.707\n",
-      "Epoch   4 Batch   68/107   train_loss = 4.698\n",
-      "Epoch   4 Batch   84/107   train_loss = 4.687\n",
-      "Epoch   4 Batch  100/107   train_loss = 4.676\n",
-      "Epoch   5 Batch    9/107   train_loss = 4.667\n",
-      "Epoch   5 Batch   25/107   train_loss = 4.657\n",
-      "Epoch   5 Batch   41/107   train_loss = 4.648\n",
-      "Epoch   5 Batch   57/107   train_loss = 4.637\n",
-      "Epoch   5 Batch   73/107   train_loss = 4.624\n",
-      "Epoch   5 Batch   89/107   train_loss = 4.611\n",
-      "Epoch   5 Batch  105/107   train_loss = 4.597\n",
-      "Epoch   6 Batch   14/107   train_loss = 4.584\n",
-      "Epoch   6 Batch   30/107   train_loss = 4.572\n",
-      "Epoch   6 Batch   46/107   train_loss = 4.562\n",
-      "Epoch   6 Batch   62/107   train_loss = 4.553\n",
-      "Epoch   6 Batch   78/107   train_loss = 4.544\n",
-      "Epoch   6 Batch   94/107   train_loss = 4.536\n",
-      "Epoch   7 Batch    3/107   train_loss = 4.529\n",
-      "Epoch   7 Batch   19/107   train_loss = 4.521\n",
-      "Epoch   7 Batch   35/107   train_loss = 4.514\n",
-      "Epoch   7 Batch   51/107   train_loss = 4.506\n",
-      "Epoch   7 Batch   67/107   train_loss = 4.498\n",
-      "Epoch   7 Batch   83/107   train_loss = 4.489\n",
-      "Epoch   7 Batch   99/107   train_loss = 4.480\n",
-      "Epoch   8 Batch    8/107   train_loss = 4.472\n",
-      "Epoch   8 Batch   24/107   train_loss = 4.464\n",
-      "Epoch   8 Batch   40/107   train_loss = 4.456\n",
-      "Epoch   8 Batch   56/107   train_loss = 4.449\n",
-      "Epoch   8 Batch   72/107   train_loss = 4.442\n",
-      "Epoch   8 Batch   88/107   train_loss = 4.436\n",
-      "Epoch   8 Batch  104/107   train_loss = 4.430\n",
-      "Epoch   9 Batch   13/107   train_loss = 4.425\n",
-      "Epoch   9 Batch   29/107   train_loss = 4.420\n",
-      "Epoch   9 Batch   45/107   train_loss = 4.415\n",
-      "Epoch   9 Batch   61/107   train_loss = 4.411\n",
-      "Epoch   9 Batch   77/107   train_loss = 4.407\n",
-      "Epoch   9 Batch   93/107   train_loss = 4.404\n",
+      "Epoch   0 Batch    0/33   train_loss = 8.823\n",
+      "Epoch   0 Batch   16/33   train_loss = 8.792\n",
+      "Epoch   0 Batch   32/33   train_loss = 8.753\n",
+      "Epoch   1 Batch   15/33   train_loss = 8.694\n",
+      "Epoch   1 Batch   31/33   train_loss = 8.598\n",
+      "Epoch   2 Batch   14/33   train_loss = 8.451\n",
+      "Epoch   2 Batch   30/33   train_loss = 8.263\n",
+      "Epoch   3 Batch   13/33   train_loss = 8.063\n",
+      "Epoch   3 Batch   29/33   train_loss = 7.866\n",
+      "Epoch   4 Batch   12/33   train_loss = 7.678\n",
+      "Epoch   4 Batch   28/33   train_loss = 7.502\n",
+      "Epoch   5 Batch   11/33   train_loss = 7.338\n",
+      "Epoch   5 Batch   27/33   train_loss = 7.185\n",
+      "Epoch   6 Batch   10/33   train_loss = 7.043\n",
+      "Epoch   6 Batch   26/33   train_loss = 6.911\n",
+      "Epoch   7 Batch    9/33   train_loss = 6.789\n",
+      "Epoch   7 Batch   25/33   train_loss = 6.677\n",
+      "Epoch   8 Batch    8/33   train_loss = 6.573\n",
+      "Epoch   8 Batch   24/33   train_loss = 6.476\n",
+      "Epoch   9 Batch    7/33   train_loss = 6.387\n",
+      "Epoch   9 Batch   23/33   train_loss = 6.304\n",
+      "Epoch  10 Batch    6/33   train_loss = 6.226\n",
+      "Epoch  10 Batch   22/33   train_loss = 6.154\n",
+      "Epoch  11 Batch    5/33   train_loss = 6.086\n",
+      "Epoch  11 Batch   21/33   train_loss = 6.023\n",
+      "Epoch  12 Batch    4/33   train_loss = 5.965\n",
+      "Epoch  12 Batch   20/33   train_loss = 5.910\n",
+      "Epoch  13 Batch    3/33   train_loss = 5.859\n",
+      "Epoch  13 Batch   19/33   train_loss = 5.811\n",
+      "Epoch  14 Batch    2/33   train_loss = 5.767\n",
+      "Epoch  14 Batch   18/33   train_loss = 5.726\n",
+      "Epoch  15 Batch    1/33   train_loss = 5.687\n",
+      "Epoch  15 Batch   17/33   train_loss = 5.651\n",
+      "Epoch  16 Batch    0/33   train_loss = 5.618\n",
+      "Epoch  16 Batch   16/33   train_loss = 5.587\n",
+      "Epoch  16 Batch   32/33   train_loss = 5.558\n",
+      "Epoch  17 Batch   15/33   train_loss = 5.531\n",
+      "Epoch  17 Batch   31/33   train_loss = 5.506\n",
+      "Epoch  18 Batch   14/33   train_loss = 5.483\n",
+      "Epoch  18 Batch   30/33   train_loss = 5.462\n",
+      "Epoch  19 Batch   13/33   train_loss = 5.442\n",
+      "Epoch  19 Batch   29/33   train_loss = 5.423\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -871,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -893,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -928,11 +903,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_tensors(loaded_graph):\n",
     "    \"\"\"\n",
@@ -941,7 +922,11 @@
     "    :return: Tuple (InputTensor, InitialStateTensor, FinalStateTensor, ProbsTensor)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None, None\n",
+    "    input_tensor = loaded_graph.get_tensor_by_name(\"input:0\")\n",
+    "    initial_tensor = loaded_graph.get_tensor_by_name(\"initial_state:0\")\n",
+    "    final_tensor = loaded_graph.get_tensor_by_name(\"final_state:0\")\n",
+    "    prob_tensor = loaded_graph.get_tensor_by_name(\"probs:0\")\n",
+    "    return input_tensor, initial_tensor, final_tensor, prob_tensor\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -960,11 +945,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
     "    \"\"\"\n",
@@ -974,7 +965,14 @@
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    # print(probabilities) [ 0.1   0.8   0.05  0.05]\n",
+    "    # print(int_to_vocab) {0: 'this', 1: 'is', 2: 'a', 3: 'test'}\n",
+    "    \n",
+    "    max_prob = np.max(probabilities)\n",
+    "    index = probabilities.tolist().index(max_prob)\n",
+    "    next_word = int_to_vocab[index]\n",
+    "    \n",
+    "    return next_word\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -993,11 +991,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moe_szyslak:........................................................................................................................................................................................................\n"
+     ]
+    }
+   ],
    "source": [
     "gen_length = 200\n",
     "# homer_simpson, moe_szyslak, or Barney_Gumble\n",
