--- a/project3/dlnd_tv_script_generation.ipynb
+++ b/project3/dlnd_tv_script_generation.ipynb
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -624,26 +624,54 @@
     "    # print(batch_size) 128\n",
     "    # print(seq_length) 5\n",
     "    \n",
-    "    result = []\n",
-    "    index1 = 0\n",
-    "    index2 = seq_length - 1\n",
-    "    number = int(np.floor(len(int_text) - seq_length) / (batch_size * seq_length))\n",
     "\n",
-    "    for i in range(number):\n",
-    "        result.append([[],[]])\n",
-    "        for j in range(batch_size):\n",
-    "            new_index1 = index1 + j * seq_length\n",
-    "            new_index2 = index2 + j * seq_length       \n",
-    "            result[i][0].append(int_text[new_index1:new_index1+seq_length])\n",
-    "            result[i][1].append(int_text[new_index2:new_index2+seq_length]) \n",
-    "\n",
-    "    return np.asarray(result)\n",
-    "\n",
+    "    numbers = int(len(int_text) / (batch_size * seq_length))\n",
+    "    \n",
+    "    input_data = np.array(int_text[:batch_size * seq_length * numbers])\n",
+    "    targets_data = np.array(int_text[1:batch_size * seq_length * numbers + 1])\n",
+    "    \n",
+    "    input_batches = np.split(input_data.reshape(batch_size, -1), numbers, 1)\n",
+    "    targets_batches = np.split(targets_data.reshape(batch_size, -1), numbers, 1)\n",
+    "    \n",
+    "    result = list(zip (input_batches, targets_batches))\n",
+    "    \n",
+    "    return np.array(result)\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
     "\"\"\"\n",
     "tests.test_get_batches(get_batches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[ 1,  2,  3],\n",
+       "         [ 7,  8,  9]],\n",
+       "\n",
+       "        [[ 2,  3,  4],\n",
+       "         [ 8,  9, 10]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 4,  5,  6],\n",
+       "         [10, 11, 12]],\n",
+       "\n",
+       "        [[ 5,  6,  7],\n",
+       "         [11, 12, 13]]]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_batches([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15], 2, 3)"
    ]
   },
   {
@@ -665,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
