--- a/project3/dlnd_tv_script_generation.ipynb
+++ b/project3/dlnd_tv_script_generation.ipynb
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -623,19 +623,17 @@
     "    # print(int_text) [0, 1, ..., 4999]\n",
     "    # print(batch_size) 128\n",
     "    # print(seq_length) 5\n",
-    "    \n",
     "\n",
     "    numbers = int(len(int_text) / (batch_size * seq_length))\n",
     "    \n",
     "    input_data = np.array(int_text[:batch_size * seq_length * numbers])\n",
-    "    targets_data = np.array(int_text[1:batch_size * seq_length * numbers + 1])\n",
+    "    target_data = np.array(int_text[1:batch_size * seq_length * numbers + 1])\n",
     "    \n",
     "    input_batches = np.split(input_data.reshape(batch_size, -1), numbers, 1)\n",
-    "    targets_batches = np.split(targets_data.reshape(batch_size, -1), numbers, 1)\n",
-    "    \n",
-    "    result = list(zip (input_batches, targets_batches))\n",
-    "    \n",
-    "    return np.array(result)\n",
+    "    target_batches = np.split(target_data.reshape(batch_size, -1), numbers, 1)\n",
+    "\n",
+    "    result = list(zip(input_batches, target_batches))\n",
+    "    return np.asarray(result)\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -645,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +663,7 @@
        "         [11, 12, 13]]]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,26 +691,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 20\n",
+    "num_epochs = 512\n",
     "# Batch Size\n",
     "batch_size = 256\n",
     "# RNN Size\n",
-    "rnn_size =4\n",
+    "rnn_size = 128\n",
     "# Embedding Dimension Size\n",
-    "embed_dim = 300\n",
+    "embed_dim = 200\n",
     "# Sequence Length\n",
-    "seq_length = 8\n",
+    "seq_length = 10\n",
     "# Learning Rate\n",
-    "learning_rate = 0.001\n",
+    "learning_rate = 0.01\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = 16\n",
+    "show_every_n_batches = 256\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -730,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -777,55 +775,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/33   train_loss = 8.823\n",
-      "Epoch   0 Batch   16/33   train_loss = 8.792\n",
-      "Epoch   0 Batch   32/33   train_loss = 8.753\n",
-      "Epoch   1 Batch   15/33   train_loss = 8.694\n",
-      "Epoch   1 Batch   31/33   train_loss = 8.598\n",
-      "Epoch   2 Batch   14/33   train_loss = 8.451\n",
-      "Epoch   2 Batch   30/33   train_loss = 8.263\n",
-      "Epoch   3 Batch   13/33   train_loss = 8.063\n",
-      "Epoch   3 Batch   29/33   train_loss = 7.866\n",
-      "Epoch   4 Batch   12/33   train_loss = 7.678\n",
-      "Epoch   4 Batch   28/33   train_loss = 7.502\n",
-      "Epoch   5 Batch   11/33   train_loss = 7.338\n",
-      "Epoch   5 Batch   27/33   train_loss = 7.185\n",
-      "Epoch   6 Batch   10/33   train_loss = 7.043\n",
-      "Epoch   6 Batch   26/33   train_loss = 6.911\n",
-      "Epoch   7 Batch    9/33   train_loss = 6.789\n",
-      "Epoch   7 Batch   25/33   train_loss = 6.677\n",
-      "Epoch   8 Batch    8/33   train_loss = 6.573\n",
-      "Epoch   8 Batch   24/33   train_loss = 6.476\n",
-      "Epoch   9 Batch    7/33   train_loss = 6.387\n",
-      "Epoch   9 Batch   23/33   train_loss = 6.304\n",
-      "Epoch  10 Batch    6/33   train_loss = 6.226\n",
-      "Epoch  10 Batch   22/33   train_loss = 6.154\n",
-      "Epoch  11 Batch    5/33   train_loss = 6.086\n",
-      "Epoch  11 Batch   21/33   train_loss = 6.023\n",
-      "Epoch  12 Batch    4/33   train_loss = 5.965\n",
-      "Epoch  12 Batch   20/33   train_loss = 5.910\n",
-      "Epoch  13 Batch    3/33   train_loss = 5.859\n",
-      "Epoch  13 Batch   19/33   train_loss = 5.811\n",
-      "Epoch  14 Batch    2/33   train_loss = 5.767\n",
-      "Epoch  14 Batch   18/33   train_loss = 5.726\n",
-      "Epoch  15 Batch    1/33   train_loss = 5.687\n",
-      "Epoch  15 Batch   17/33   train_loss = 5.651\n",
-      "Epoch  16 Batch    0/33   train_loss = 5.618\n",
-      "Epoch  16 Batch   16/33   train_loss = 5.587\n",
-      "Epoch  16 Batch   32/33   train_loss = 5.558\n",
-      "Epoch  17 Batch   15/33   train_loss = 5.531\n",
-      "Epoch  17 Batch   31/33   train_loss = 5.506\n",
-      "Epoch  18 Batch   14/33   train_loss = 5.483\n",
-      "Epoch  18 Batch   30/33   train_loss = 5.462\n",
-      "Epoch  19 Batch   13/33   train_loss = 5.442\n",
-      "Epoch  19 Batch   29/33   train_loss = 5.423\n",
+      "Epoch   0 Batch    0/26   train_loss = 8.822\n",
+      "Epoch   9 Batch   22/26   train_loss = 6.005\n",
+      "Epoch  19 Batch   18/26   train_loss = 6.028\n",
+      "Epoch  29 Batch   14/26   train_loss = 5.339\n",
+      "Epoch  39 Batch   10/26   train_loss = 4.290\n",
+      "Epoch  49 Batch    6/26   train_loss = 4.073\n",
+      "Epoch  59 Batch    2/26   train_loss = 3.492\n",
+      "Epoch  68 Batch   24/26   train_loss = 3.060\n",
+      "Epoch  78 Batch   20/26   train_loss = 2.858\n",
+      "Epoch  88 Batch   16/26   train_loss = 2.540\n",
+      "Epoch  98 Batch   12/26   train_loss = 2.259\n",
+      "Epoch 108 Batch    8/26   train_loss = 2.046\n",
+      "Epoch 118 Batch    4/26   train_loss = 2.135\n",
+      "Epoch 128 Batch    0/26   train_loss = 1.792\n",
+      "Epoch 137 Batch   22/26   train_loss = 1.724\n",
+      "Epoch 147 Batch   18/26   train_loss = 1.490\n",
+      "Epoch 157 Batch   14/26   train_loss = 1.486\n",
+      "Epoch 167 Batch   10/26   train_loss = 1.495\n",
+      "Epoch 177 Batch    6/26   train_loss = 1.512\n",
+      "Epoch 187 Batch    2/26   train_loss = 1.271\n",
+      "Epoch 196 Batch   24/26   train_loss = 1.195\n",
+      "Epoch 206 Batch   20/26   train_loss = 1.247\n",
+      "Epoch 216 Batch   16/26   train_loss = 1.346\n",
+      "Epoch 226 Batch   12/26   train_loss = 1.310\n",
+      "Epoch 236 Batch    8/26   train_loss = 1.130\n",
+      "Epoch 246 Batch    4/26   train_loss = 1.168\n",
+      "Epoch 256 Batch    0/26   train_loss = 1.115\n",
+      "Epoch 265 Batch   22/26   train_loss = 1.123\n",
+      "Epoch 275 Batch   18/26   train_loss = 1.046\n",
+      "Epoch 285 Batch   14/26   train_loss = 1.034\n",
+      "Epoch 295 Batch   10/26   train_loss = 1.085\n",
+      "Epoch 305 Batch    6/26   train_loss = 1.002\n",
+      "Epoch 315 Batch    2/26   train_loss = 1.028\n",
+      "Epoch 324 Batch   24/26   train_loss = 0.921\n",
+      "Epoch 334 Batch   20/26   train_loss = 1.018\n",
+      "Epoch 344 Batch   16/26   train_loss = 1.100\n",
+      "Epoch 354 Batch   12/26   train_loss = 1.040\n",
+      "Epoch 364 Batch    8/26   train_loss = 0.920\n",
+      "Epoch 374 Batch    4/26   train_loss = 1.076\n",
+      "Epoch 384 Batch    0/26   train_loss = 0.965\n",
+      "Epoch 393 Batch   22/26   train_loss = 1.075\n",
+      "Epoch 403 Batch   18/26   train_loss = 0.991\n",
+      "Epoch 413 Batch   14/26   train_loss = 0.927\n",
+      "Epoch 423 Batch   10/26   train_loss = 0.863\n",
+      "Epoch 433 Batch    6/26   train_loss = 0.866\n",
+      "Epoch 443 Batch    2/26   train_loss = 0.819\n",
+      "Epoch 452 Batch   24/26   train_loss = 1.026\n",
+      "Epoch 462 Batch   20/26   train_loss = 1.375\n",
+      "Epoch 472 Batch   16/26   train_loss = 1.121\n",
+      "Epoch 482 Batch   12/26   train_loss = 0.743\n",
+      "Epoch 492 Batch    8/26   train_loss = 0.606\n",
+      "Epoch 502 Batch    4/26   train_loss = 0.711\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -874,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -896,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -931,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1019,14 +1027,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moe_szyslak:........................................................................................................................................................................................................\n"
+      "moe_szyslak:(into phone) gotcha ya-- white!\n",
+      "homer_simpson:(nods)\" this? / which right. i know a\" eyes loves me.\n",
+      "moe_szyslak: huh carlson, it not up again.\n",
+      "moe_szyslak: if i want me your play? i can even go with your door(eyes, now, electronic voice and thanks is about to me. take the america to filthy and your around, homer?\"\n",
+      "homer_simpson:(dying) leave off his bunch of moe's wagering is, manfred time that love up!\n",
+      "moe_szyslak:(laughing) i'm that that...\n",
+      "homer_simpson:(sings) i never say that i'll put us out!\n",
+      "glen: yeah, i gotta do it off?\n",
+      "lenny_leonard: yeah, i don't think what wouldn't take your peanuts.\n",
+      "homer_simpson: guys, i'm not seven stand on a game idea?\n",
+      "moe_szyslak: oh no, dad.\n",
+      "homer_simpson:(tipsy) it's not here. my mayor!\n",
+      "moe_szyslak: yeah, i think i went about here! i got the money?\n",
+      "moe_szyslak:(\n"
      ]
     }
    ],
