Finish First part and store the check point.

--- a/project4/dlnd_language_translation.ipynb
+++ b/project4/dlnd_language_translation.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -119,9 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def text_to_ids(source_text, target_text, source_vocab_to_int, target_vocab_to_int):\n",
     "    \"\"\"\n",
@@ -133,7 +143,28 @@
     "    :return: A tuple of lists (source_id_text, target_id_text)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    # print(source_text) new jersey is sometimes quiet during autumn , and it is snowy in april .\n",
+    "    # print(target_text) new jersey est parfois calme pendant l' automne , et il est neigeux en avril .\n",
+    "    # print(source_vocab_to_int) {'the': 4, '<PAD>': 0, 'april': 20}\n",
+    "    # print(target_vocab_to_int) {'novembre': 5, '<PAD>': 0, 'mars': 22, 'est': 6, 'automne': 4}\n",
+    "    \n",
+    "    source_id_text = []\n",
+    "    target_id_text = []\n",
+    "    for line in source_text.split(\"\\n\"):\n",
+    "        line_temp = []\n",
+    "        for word in line.split():\n",
+    "            line_temp.append(source_vocab_to_int[word])\n",
+    "        source_id_text.append(line_temp)\n",
+    "        line_temp = []\n",
+    "    for line in target_text.split(\"\\n\"):\n",
+    "        line_temp= []\n",
+    "        for word in line.split():\n",
+    "            line_temp.append(target_vocab_to_int[word])\n",
+    "        line_temp.append(target_vocab_to_int[\"<EOS>\"])\n",
+    "        target_id_text.append(line_temp)\n",
+    "        line_temp = []\n",
+    "    \n",
+    "    return source_id_text, target_id_text\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -152,7 +183,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -172,7 +205,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -195,7 +230,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -244,7 +281,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def model_inputs():\n",
@@ -272,7 +311,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def process_decoding_input(target_data, target_vocab_to_int, batch_size):\n",
@@ -303,7 +344,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def encoding_layer(rnn_inputs, rnn_size, num_layers, keep_prob):\n",
@@ -335,7 +378,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def decoding_layer_train(encoder_state, dec_cell, dec_embed_input, sequence_length, decoding_scope,\n",
@@ -372,7 +417,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def decoding_layer_infer(encoder_state, dec_cell, dec_embeddings, start_of_sequence_id, end_of_sequence_id,\n",
@@ -419,7 +466,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def decoding_layer(dec_embed_input, dec_embeddings, encoder_state, vocab_size, sequence_length, rnn_size,\n",
@@ -464,7 +513,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def seq2seq_model(input_data, target_data, keep_prob, batch_size, sequence_length, source_vocab_size, target_vocab_size,\n",
@@ -549,7 +600,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -598,6 +651,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -677,7 +731,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -697,7 +753,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -727,7 +785,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def sentence_to_seq(sentence, vocab_to_int):\n",
@@ -758,7 +818,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "translate_sentence = 'he saw a old yellow truck .'\n",
