Finish more parts.

--- a/project4/dlnd_language_translation.ipynb
+++ b/project4/dlnd_language_translation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -229,11 +229,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.0.0\n",
+      "Default GPU Device: /gpu:0\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -280,11 +287,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def model_inputs():\n",
     "    \"\"\"\n",
@@ -292,7 +305,13 @@
     "    :return: Tuple (input, targets, learning rate, keep probability)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None, None\n",
+    "\n",
+    "    model_input = tf.placeholder(tf.int32, [None, None], name = \"input\")\n",
+    "    model_target = tf.placeholder(tf.int32, [None, None], name = \"target\")\n",
+    "    model_learning_rate = tf.placeholder(tf.float32, name = \"learning_rate\")\n",
+    "    model_keep_prob = tf.placeholder(tf.float32, name = \"keep_prob\")\n",
+    "    \n",
+    "    return model_input, model_target, model_learning_rate, model_keep_prob\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -310,11 +329,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def process_decoding_input(target_data, target_vocab_to_int, batch_size):\n",
     "    \"\"\"\n",
@@ -325,7 +350,18 @@
     "    :return: Preprocessed target data\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    \n",
+    "    # print(target_data) Tensor(\"Placeholder:0\", shape=(2, 3), dtype=int32)\n",
+    "    # print(target_vocab_to_int) {'<GO>': 3}\n",
+    "    # print(batch_size) 2\n",
+    "    \n",
+    "    # https://www.tensorflow.org/api_docs/python/tf/strided_slice\n",
+    "    # https://www.tensorflow.org/api_docs/python/tf/concat\n",
+    "    \n",
+    "    remove_end = tf.strided_slice(target_data, [0, 0], [batch_size, -1], [1, 1])\n",
+    "    decoding_input = tf.concat([tf.fill([batch_size, 1], target_vocab_to_int['<GO>']), remove_end], 1)\n",
+    "\n",
+    "    return decoding_input\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
