Finish Encoding and Decoding parts.

--- a/project4/dlnd_language_translation.ipynb
+++ b/project4/dlnd_language_translation.ipynb
@@ -379,11 +379,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def encoding_layer(rnn_inputs, rnn_size, num_layers, keep_prob):\n",
     "    \"\"\"\n",
@@ -395,7 +401,17 @@
     "    :return: RNN state\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    # print(rnn_inputs) Tensor(\"Placeholder:0\", shape=(64, 22, 1000), dtype=float32)\n",
+    "    # print(rnn_size) 512\n",
+    "    # print(num_layers) 3\n",
+    "    # print(keep_prob) Tensor(\"Placeholder_1:0\", dtype=float32)\n",
+    "    \n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "    drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob = keep_prob)\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([lstm] * num_layers)\n",
+    "    outputs, rnn_state = tf.nn.dynamic_rnn(cell, rnn_inputs, dtype = tf.float32)\n",
+    "    \n",
+    "    return rnn_state\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -413,11 +429,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def decoding_layer_train(encoder_state, dec_cell, dec_embed_input, sequence_length, decoding_scope,\n",
     "                         output_fn, keep_prob):\n",
@@ -433,7 +455,21 @@
     "    :return: Train Logits\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    # print(encoder_state) LSTMStateTuple\n",
+    "    # print(dec_cell) MultiRNNCell\n",
+    "    # print(dec_embed_input) Tensor(\"decoding/Placeholder:0\", shape=(64, 22, 200), dtype=float32)\n",
+    "    # print(sequence_length) 22\n",
+    "    # print(decoding_scope) VariableScope\n",
+    "    # print(output_fn) function test_decoding_layer_train\n",
+    "    # print(keep_prob) Tensor(\"decoding/Placeholder_1:0\", dtype=float32)\n",
+    "    \n",
+    "    dynamic_fn_train = tf.contrib.seq2seq.simple_decoder_fn_train(encoder_state) \n",
+    "    drop_cell = tf.contrib.rnn.DropoutWrapper(dec_cell, output_keep_prob = keep_prob)\n",
+    "    outputs_train, state_train, other_train = tf.contrib.seq2seq.dynamic_rnn_decoder(drop_cell, dynamic_fn_train, \n",
+    "                                                                        dec_embed_input, sequence_length, scope = decoding_scope)\n",
+    "    logits = output_fn(outputs_train)\n",
+    "    \n",
+    "    return logits\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -452,11 +488,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def decoding_layer_infer(encoder_state, dec_cell, dec_embeddings, start_of_sequence_id, end_of_sequence_id,\n",
     "                         maximum_length, vocab_size, decoding_scope, output_fn, keep_prob):\n",
@@ -475,7 +517,14 @@
     "    :return: Inference Logits\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    \n",
+    "    dynamic_fn_inference = tf.contrib.seq2seq.simple_decoder_fn_inference(output_fn, encoder_state, dec_embeddings, \n",
+    "                                                                          start_of_sequence_id, end_of_sequence_id, \n",
+    "                                                                          maximum_length, vocab_size)\n",
+    "    drop_cell = tf.contrib.rnn.DropoutWrapper(dec_cell, output_keep_prob = keep_prob)\n",
+    "    outputs_inference, state_inference, other_inference = tf.contrib.seq2seq.dynamic_rnn_decoder(drop_cell, dynamic_fn_inference, \n",
+    "                                                                                                 scope = decoding_scope)\n",
+    "    return outputs_inference\n",
     "\n",
     "\n",
     "\"\"\"\n",
