--- a/project4/dlnd_language_translation.ipynb
+++ b/project4/dlnd_language_translation.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
     "    \n",
     "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
     "    drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob = keep_prob)\n",
-    "    cell = tf.contrib.rnn.MultiRNNCell([lstm] * num_layers)\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([drop] * num_layers)\n",
     "    outputs, rnn_state = tf.nn.dynamic_rnn(cell, rnn_inputs, dtype = tf.float32)\n",
     "    \n",
     "    return rnn_state\n",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -550,11 +550,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def decoding_layer(dec_embed_input, dec_embeddings, encoder_state, vocab_size, sequence_length, rnn_size,\n",
     "                   num_layers, target_vocab_to_int, keep_prob):\n",
@@ -572,7 +578,27 @@
     "    :return: Tuple of (Training Logits, Inference Logits)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    # https://www.tensorflow.org/api_docs/python/tf/variable_scope\n",
+    "    \n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "    drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob = keep_prob)\n",
+    "    dec_cell = tf.contrib.rnn.MultiRNNCell([drop] * num_layers)\n",
+    "    \n",
+    "    output_fn = lambda x: tf.contrib.layers.fully_connected(x, vocab_size, None, scope=decoding_scope) \n",
+    "    \n",
+    "    start_of_sequence_id = target_vocab_to_int['<GO>']\n",
+    "    end_of_sequence_id = target_vocab_to_int['<EOS>']\n",
+    "    maximum_length = sequence_length\n",
+    "    \n",
+    "    with tf.variable_scope('training') as decoding_scope:\n",
+    "        train_logits = decoding_layer_train(encoder_state, dec_cell, dec_embed_input, \n",
+    "                                            sequence_length, decoding_scope, output_fn, keep_prob)\n",
+    "    with tf.variable_scope('training', reuse=True) as decoding_scope:\n",
+    "        inf_logits = decoding_layer_infer(encoder_state, dec_cell, dec_embeddings, \n",
+    "                                          start_of_sequence_id, end_of_sequence_id, \n",
+    "                                          maximum_length, vocab_size, decoding_scope, output_fn, keep_prob) \n",
+    "    \n",
+    "    return train_logits, inf_logits\n",
     "\n",
     "\n",
     "\"\"\"\n",
