--- a/project4/dlnd_language_translation.ipynb
+++ b/project4/dlnd_language_translation.ipynb
@@ -2353,11 +2353,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def sentence_to_seq(sentence, vocab_to_int):\n",
     "    \"\"\"\n",
@@ -2367,12 +2373,17 @@
     "    :return: List of word ids\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    print(sentence)\n",
+    "    \n",
+    "    #print(sentence) this is a test sentence\n",
+    "    #print(vocab_to_int) {'this': 3, '<UNK>': 2, 'is': 6, '<EOS>': 1, '<PAD>': 0, 'a': 5, 'sentence': 4}\n",
     "    \n",
     "    result = []\n",
-    "    for word in setence.split(\" \"):\n",
-    "        result.append(vocab_to_int[word])\n",
-    "        \n",
+    "    for word in sentence.lower().split():\n",
+    "        if word in vocab_to_int.keys():\n",
+    "            result.append(vocab_to_int[word])\n",
+    "        else:\n",
+    "            result.append(vocab_to_int[\"<UNK>\"])\n",
+    "            \n",
     "    return result\n",
     "\n",
     "\n",
@@ -2392,11 +2403,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input\n",
+      "  Word Ids:      [63, 87, 167, 156, 212, 11, 77]\n",
+      "  English Words: ['he', 'saw', 'a', 'old', 'yellow', 'truck', '.']\n",
+      "\n",
+      "Prediction\n",
+      "  Word Ids:      [157, 160, 306, 237, 281, 207, 327, 36, 1]\n",
+      "  French Words: ['il', 'a', 'vu', 'une', 'vieille', 'voiture', 'verte', '.', '<EOS>']\n"
+     ]
+    }
+   ],
    "source": [
     "translate_sentence = 'he saw a old yellow truck .'\n",
     "\n",
