Finish generator and discriminator.

--- a/project5/dlnd_face_generation.ipynb
+++ b/project5/dlnd_face_generation.ipynb
@@ -209,9 +209,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import problem_unittests as tests\n",
     "\n",
@@ -225,8 +233,10 @@
     "    :return: Tuple of (tensor of real input images, tensor of z data, learning rate)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "\n",
-    "    return None, None, None\n",
+    "    model_input = tf.placeholder(tf.int32, [None, image_width, image_height, image_channels], name = \"input\")\n",
+    "    model_z = tf.placeholder(tf.int32, [None, z_dim], name = \"z\")\n",
+    "    model_learning_rate = tf.placeholder(tf.float32, name = \"learning_rate\")\n",
+    "    return model_input, model_z, model_learning_rate\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -245,9 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def discriminator(images, reuse=False):\n",
     "    \"\"\"\n",
@@ -258,7 +276,19 @@
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
     "\n",
-    "    return None, None\n",
+    "    with tf.variable_scope(\"discriminator\", reuse = reuse):\n",
+    "        x1 = tf.layers.conv2d(images, 128, 5, strides = 2, padding = \"same\")\n",
+    "        relu1 = tf.maximum(0.1 * x1, x1)\n",
+    "        \n",
+    "        x2 = tf.layers.conv2d(relu1, 256, 5, strides = 2, padding = \"same\")\n",
+    "        bn2 = tf.layers.batch_normalization(x2, training = True)\n",
+    "        relu2 = tf.maximum(0.1 * x2, x2)\n",
+    "        \n",
+    "        flat = tf.reshape(relu2, (-1, 7 * 7 * 256))\n",
+    "        logits = tf.layers.dense(flat, 1)\n",
+    "        out = tf.sigmoid(logits)\n",
+    "        \n",
+    "    return out, logits\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -277,9 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def generator(z, out_channel_dim, is_train=True):\n",
     "    \"\"\"\n",
@@ -290,8 +328,26 @@
     "    :return: The tensor output of the generator\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
+    "\n",
+    "    with tf.variable_scope(\"generator\", reuse = not is_train):\n",
+    "        x1 = tf.layers.dense(z, 7 * 7 * 256)\n",
+    "        \n",
+    "        x1 = tf.reshape(x1, (-1, 7, 7, 256))\n",
+    "        x1 = tf.layers.batch_normalization(x1, training = is_train)\n",
+    "        x1 = tf.maximum(0.1 * x1, x1)\n",
+    "        # 7 x 7 x 256\n",
+    "        \n",
+    "        x2 = tf.layers.conv2d_transpose(x1, 128, 5, strides = 2, padding = \"same\")\n",
+    "        x2 = tf.layers.batch_normalization(x2, training = is_train)\n",
+    "        x2 = tf.maximum(0.1 * x2, x2)        \n",
+    "        # 14 x 14 x 128\n",
+    "        \n",
+    "        logits = tf.layers.conv2d_transpose(x2, out_channel_dim, 5, strides = 2, padding = \"same\")\n",
+    "        # 28 x 28 x out_channel_dim\n",
+    "        \n",
+    "        out = tf.tanh(logits)\n",
     "    \n",
-    "    return None\n",
+    "    return out\n",
     "\n",
     "\n",
     "\"\"\"\n",
