--- a/project5/dlnd_face_generation.ipynb
+++ b/project5/dlnd_face_generation.ipynb
@@ -368,9 +368,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def model_loss(input_real, input_z, out_channel_dim):\n",
     "    \"\"\"\n",
@@ -381,8 +389,21 @@
     "    :return: A tuple of (discriminator loss, generator loss)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
+    "\n",
+    "    g_model = generator(input_z, out_channel_dim)\n",
+    "    d_model_real, d_logits_real = discriminator(input_real)\n",
+    "    d_model_fake, d_logits_fake = discriminator(g_model, reuse = True)\n",
     "    \n",
-    "    return None, None\n",
+    "    d_loss_real = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=d_logits_real, \n",
+    "                                                                         labels=tf.ones_like(d_model_real)))\n",
+    "    d_loss_fake = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=d_logits_fake, \n",
+    "                                                                         labels=tf.zeros_like(d_model_fake)))\n",
+    "                                \n",
+    "    g_loss = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=d_logits_fake, \n",
+    "                                                                         labels=tf.ones_like(d_model_real)))\n",
+    "    d_loss = d_loss_real + d_loss_fake\n",
+    "    \n",
+    "    return d_loss, g_loss\n",
     "\n",
     "\n",
     "\"\"\"\n",
