--- a/project5/dlnd_face_generation.ipynb
+++ b/project5/dlnd_face_generation.ipynb
@@ -422,9 +422,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def model_opt(d_loss, g_loss, learning_rate, beta1):\n",
     "    \"\"\"\n",
@@ -437,7 +445,15 @@
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
     "    \n",
-    "    return None, None\n",
+    "    t_vars = tf.trainable_variables()\n",
+    "    \n",
+    "    d_vars = [var for var in t_vars if var.name.startswith(\"discriminator\")]\n",
+    "    g_vars = [var for var in t_vars if var.name.startswith(\"generator\")]\n",
+    "    \n",
+    "    d_train_opt = tf.train.AdamOptimizer(learning_rate, beta1 = beta1).minimize(d_loss,var_list = d_vars)\n",
+    "    g_train_opt = tf.train.AdamOptimizer(learning_rate, beta1 = beta1).minimize(g_loss,var_list = g_vars)\n",
+    "    \n",
+    "    return d_train_opt, g_train_opt\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -457,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -525,6 +541,7 @@
     "    \"\"\"\n",
     "    # TODO: Build Model\n",
     "    \n",
+    "\n",
     "    \n",
     "    with tf.Session() as sess:\n",
     "        sess.run(tf.global_variables_initializer())\n",
@@ -532,6 +549,9 @@
     "            for batch_images in get_batches(batch_size):\n",
     "                # TODO: Train Model\n",
     "                \n",
+    "                input_real, input_z = model_inputs(image_width, image_height, image_channels, z_dim)\n",
+    "                d_loss,g_loss = model_loss(input_real, input_z, out_channel_dim)\n",
+    "                d_opt, g_opt = model_opt(d_loss, g_loss, learning_rate, beta1)                \n",
     "                "
    ]
   },
